# TAMP

./: .gitignore
panda_moveit_config/: package.xml
panda_moveit_config/launch/: moveit_gazebo_obb.py  moveit_rviz.launch.py
pytamp_moveit_bridge/: package.xml
pytamp_moveit_bridge/msg/: TaskAction.msg
pytamp_moveit_bridge/scripts/: mock_perception.py
pytamp_moveit_bridge/src/: action_executor.py  planner_node.py
src/panda_moveit_config/config/: joint_limits.yaml
src/panda_moveit_config/launch/: moveit_gazebo_obb.py
src/panda_moveit_config/scripts/: arm_control_from_UI.py
src/panda_moveit_config/worlds/: arm_on_the_table.sdf
src/pytamp_moveit_bridge/: CMakeLists.txt
src/pytamp_moveit_bridge/launch/: integration.launch.py
src/pytamp_moveit_bridge/msg/: ObjectState.msg  WorldState.msg
src/pytamp_moveit_bridge/src/: object_state_manager.py  scene_interface.py
src/robot_description/urdf/: panda.urdf
src/robot_description/urdf/camera/: camera.gazebo
src/yolov8_obb/scripts/: yolov8_obb_publisher.py
